fixed the scrolly bug and alignment

--- a/app.css
+++ b/app.css
@@ -53,8 +53,8 @@ body {
 .home-arrow {
 	display: inline-block;
 	position: relative;
-	width: 70px;
-	height: 70px;
+	width: 90px;
+	height: 90px;
 }
 
 .container-heading {
